AKS-Manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: test
  name: doe-postgres
  labels:
    app: doe_postgres
spec:
  loadBalancerIP: #{dblbip}#
  type: #{type}#
  ports:
   - port: 5432
  selector:
   app: doe_postgres
